--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -19,6 +19,7 @@ data_options:
   use_latent_representation: false
   geo_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/ic_geo_dict.npy"
   geo_inverse_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/geo_inverse_dict.npy"
+  shuffle_files: true
 
 model_options:
   in_channels: 9
@@ -30,13 +31,13 @@ model_options:
   dropout: 0.1
   downstream_task: "angular_reco"
   loss_fn: "vmf"
-  k_neighbors: 16
+  k_neighbors: 8
   pool_method: "max"
 
 training_options:
   batch_size: 512
   lr: 0.0001
-  lr_schedule: [30, 1]
+  lr_schedule: [0, 30]
   weight_decay: 0.01
   epochs: 30
   save_epochs: 10
