attention bias layers/transformer

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,10 +1,10 @@
 project_name: "neptune"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/ic_pointclouds"
-training: false
+training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "icecube_parquet"
-checkpoint: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/meows_m1_ckpts/meows_neptune_dir_reco_5M_finetune_epoch29.ckpt"
+checkpoint: ""
 resume_training: false
 
 data_options:
@@ -15,15 +15,16 @@ data_options:
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_MC_latents/meows_tracks_sscnn_test/"
   valid_data_file_ranges:
-    - [0, 250]
+    - [0, 100]
+  use_pulse_series: true
   use_latent_representation: false
   geo_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/ic_geo_dict.npy"
   geo_inverse_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/geo_inverse_dict.npy"
   shuffle_files: true
 
 model_options:
-  in_channels: 9
-  num_patches: 128
+  in_channels: 2
+  num_patches: 192
   token_dim: 512
   num_layers: 12
   num_heads: 8
@@ -31,7 +32,7 @@ model_options:
   dropout: 0.1
   downstream_task: "angular_reco"
   loss_fn: "vmf"
-  k_neighbors: 8
+  k_neighbors: 32
   pool_method: "max"
 
 training_options:
@@ -42,5 +43,5 @@ training_options:
   epochs: 30
   save_epochs: 10
   num_workers: 4
-  precision: "bf16-true"
+  precision: "bf16-mixed"
   test_precision: "32-true"
