--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -15,16 +15,16 @@ data_options:
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_MC_latents/meows_tracks_sscnn_test/"
   valid_data_file_ranges:
-    - [0, 100]
-  use_pulse_series: true
+    - [0, 250]
+  use_pulse_series: false
   use_latent_representation: false
   geo_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/ic_geo_dict.npy"
   geo_inverse_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/geo_inverse_dict.npy"
   shuffle_files: true
 
 model_options:
-  in_channels: 2
-  num_patches: 192
+  in_channels: 9
+  num_patches: 128
   token_dim: 512
   num_layers: 12
   num_heads: 8
@@ -32,8 +32,9 @@ model_options:
   dropout: 0.1
   downstream_task: "angular_reco"
   loss_fn: "vmf"
-  k_neighbors: 32
+  k_neighbors: 8
   pool_method: "max"
+  pre_norm: true
 
 training_options:
   batch_size: 512
