--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -3,7 +3,7 @@ project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/ic_p
 training: true
 accelerator: "gpu"
 num_devices: 1
-dataloader: "icecube_parquet"
+dataloader: "prometheus"
 checkpoint: ""
 resume_training: false
 
@@ -16,10 +16,7 @@ data_options:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_MC_latents/meows_tracks_sscnn_test/"
   valid_data_file_ranges:
     - [0, 250]
-  use_pulse_series: false
-  use_latent_representation: false
-  geo_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/ic_geo_dict.npy"
-  geo_inverse_dict_path: "/n/holylfs05/LABS/arguelles_delgado_lab/Users/felixyu/nt_mlreco/scratch/geo_inverse_dict.npy"
+  use_om2vec: true
   shuffle_files: true
 
 model_options:
