--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,5 +1,5 @@
-project_name: "neptune"
-project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/ic_pointclouds"
+project_name: "neptune_prometheus"
+project_save_dir: "./experiment_logs/"
 training: true
 accelerator: "gpu"
 num_devices: 1
@@ -9,18 +9,18 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_MC_latents/meows_tracks_sscnn_train/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
-    - [0, 2382]
+    - [0, 150]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_MC_latents/meows_tracks_sscnn_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
-    - [0, 250]
+    - [0, 23]
   use_om2vec: true
   shuffle_files: true
 
 model_options:
-  in_channels: 9
+  in_channels: 64
   num_patches: 128
   token_dim: 512
   num_layers: 12
