add self-supervised functionality

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -4,7 +4,13 @@ training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: ""
+checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
+
+pretrain_options:
+  masking_ratio: 0.2
+  centroid_loss_weight: 1.0 # Default weight for centroid reconstruction loss
+
 resume_training: false
 
 data_options:
