--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -4,11 +4,11 @@ training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
+checkpoint: "./ckpts/neptune_ssl_pretrained_epoch19.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
-  masking_ratio: 0.2
+  masking_ratio: 0.6
   centroid_loss_weight: 1.0 # Default weight for centroid reconstruction loss
 
 resume_training: false
@@ -17,16 +17,16 @@ data_options:
   train_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
-    - [0, 150]
+    - [0, 193]
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 23]
-  use_om2vec: true
+  use_om2vec: false
   shuffle_files: true
 
 model_options:
-  in_channels: 64
+  in_channels: 9
   num_patches: 128
   token_dim: 512
   num_layers: 12
