--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -4,8 +4,8 @@ training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "./ckpts/neptune_ssl_pretrained_epoch19.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
+checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
   masking_ratio: 0.6
@@ -16,12 +16,16 @@ resume_training: false
 data_options:
   train_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
   train_data_file_ranges:
-    - [0, 193]
+    - [0, 30]
+    # - [0, 46]
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
   valid_data_file_ranges:
-    - [0, 23]
+    - [0, 5]
+    # - [0, 11]
   use_om2vec: false
   shuffle_files: true
 
@@ -34,7 +38,7 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  loss_fn: "fb6"
   k_neighbors: 8
   pool_method: "max"
   pre_norm: true
