--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,10 +1,10 @@
 project_name: "neptune_prometheus"
 project_save_dir: "./experiment_logs/"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+checkpoint: "./ckpts/neptune_ssl_pulses_supervised_baseline_epoch29.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
 training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
@@ -15,31 +15,31 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
   train_data_file_ranges:
-    - [0, 30]
-    # - [0, 46]
+    # - [0, 193]
+    - [0, 46]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
   valid_data_file_ranges:
-    - [0, 5]
-    # - [0, 11]
+    # - [0, 23]
+    - [0, 11]
   use_om2vec: false
   shuffle_files: true
 
 model_options:
-  in_channels: 9
-  num_patches: 128
+  in_channels: 1
+  num_patches: 512
   token_dim: 512
   num_layers: 12
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "fb6"
-  k_neighbors: 8
+  loss_fn: "vmf"
+  k_neighbors: 32
   pool_method: "max"
   pre_norm: true
 
