--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -27,6 +27,10 @@ data_options:
     # - [0, 23]
     - [0, 11]
   use_om2vec: false
+  use_summary_stats: false
+  add_noise: false
+  time_variance: 1.0
+  dropout_fraction: 0.1
   shuffle_files: true
 
 model_options:
