--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -4,33 +4,33 @@ training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "./ckpts/neptune_ssl_pulses_supervised_baseline_epoch29.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
+checkpoint: "./ckpts/neptune_ssl_pt0.75_scatter_frozentune_epoch9.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
-  masking_ratio: 0.6
+  masking_ratio: 0.75
   centroid_loss_weight: 1.0 # Default weight for centroid reconstruction loss
 
 resume_training: false
 
 data_options:
   train_data_files:
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
   train_data_file_ranges:
-    # - [0, 193]
     - [0, 46]
+    # - [0, 46]
   valid_data_files:
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
   valid_data_file_ranges:
-    # - [0, 23]
     - [0, 11]
+    # - [0, 11]
   use_om2vec: false
   use_summary_stats: false
   add_noise: false
-  time_variance: 1.0
-  dropout_fraction: 0.1
+  time_variance: 100.0
+  dropout_fraction: 0.25
   shuffle_files: true
 
 model_options:
@@ -50,9 +50,9 @@ model_options:
 training_options:
   batch_size: 512
   lr: 0.0001
-  lr_schedule: [0, 30]
+  lr_schedule: [0, 10]
   weight_decay: 0.01
-  epochs: 30
+  epochs: 10
   save_epochs: 10
   num_workers: 4
   precision: "bf16-mixed"
