--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -32,6 +32,10 @@ data_options:
   time_variance: 100.0
   dropout_fraction: 0.25
   shuffle_files: true
+  real_data_files:
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/data_20chan/"
+  real_data_file_ranges:
+    - [0, 1]
 
 model_options:
   in_channels: 1
@@ -46,6 +50,10 @@ model_options:
   k_neighbors: 32
   pool_method: "max"
   pre_norm: true
+
+regularization_options:
+  coral_regularization: false
+  coral_regularization_weight: 1.0
 
 training_options:
   batch_size: 512
