coral last update

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,10 +1,10 @@
 project_name: "neptune_prometheus"
 project_save_dir: "./experiment_logs/"
-training: false
+training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "./ckpts/neptune_ssl_pt0.75_scatter_frozentune_epoch9.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+checkpoint: "./ckpts/neptune_ssl_pretrain_0.75mask_scattered_epoch49.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
 training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
@@ -24,8 +24,8 @@ data_options:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
   valid_data_file_ranges:
+    # - [0, 24]
     - [0, 11]
-    # - [0, 11]
   use_om2vec: false
   use_summary_stats: false
   add_noise: false
@@ -33,9 +33,9 @@ data_options:
   dropout_fraction: 0.25
   shuffle_files: true
   real_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/data_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
   real_data_file_ranges:
-    - [0, 1]
+    - [0, 46]
 
 model_options:
   in_channels: 1
@@ -53,15 +53,15 @@ model_options:
 
 regularization_options:
   coral_regularization: false
-  coral_regularization_weight: 1.0
+  coral_regularization_weight: 10.0
 
 training_options:
   batch_size: 512
-  lr: 0.0001
-  lr_schedule: [0, 10]
+  lr: 0.001
+  lr_schedule: [0, 5]
   weight_decay: 0.01
-  epochs: 10
-  save_epochs: 10
+  epochs: 5
+  save_epochs: 5
   num_workers: 4
   precision: "bf16-mixed"
   test_precision: "32-true"
