rotation pretrain task

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -8,8 +8,10 @@ checkpoint: "./ckpts/neptune_ssl_pt0.75_scatter_frozentune_epoch9.ckpt" # For "r
 training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
+  pretrain_task: "rotation" # "masking" or "rotation"
   masking_ratio: 0.75
   centroid_loss_weight: 1.0 # Default weight for centroid reconstruction loss
+  rotation_loss_weight: 1.0
 
 resume_training: false
 
