--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,15 +1,15 @@
 project_name: "neptune_prometheus"
 project_save_dir: "./experiment_logs/"
-training: false
+training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "./ckpts/neptune_ssl_pt0.75_scatter_frozentune_epoch9.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
+checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+training_mode: "pretrain"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
-  masking_ratio: 0.75
-  pretrain_task: "spatial" # Options: "spatial", "temporal", "spatiotemporal"
+  masking_ratio: 1.0
+  pretrain_task: "temporal" # Options: "spatial", "temporal", "spatiotemporal"
   centroid_loss_weight: 1.0 # Default weight for centroid reconstruction loss
 
 resume_training: false
@@ -18,15 +18,19 @@ data_options:
   train_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
   train_data_file_ranges:
-    - [0, 46]
+    - [0, 143]
     # - [0, 46]
+    # - [0, 42]
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
   valid_data_file_ranges:
-    - [0, 11]
+    - [0, 24]
     # - [0, 11]
+    # - [0, 10]
   use_om2vec: false
   use_summary_stats: false
   add_noise: false
@@ -42,8 +46,8 @@ model_options:
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  downstream_task: "energy_reco"
+  loss_fn: "log_cosh"
   k_neighbors: 32
   pool_method: "max"
   pre_norm: true
@@ -51,9 +55,9 @@ model_options:
 training_options:
   batch_size: 512
   lr: 0.0001
-  lr_schedule: [0, 10]
+  lr_schedule: [0, 50]
   weight_decay: 0.01
-  epochs: 10
+  epochs: 50
   save_epochs: 10
   num_workers: 4
   precision: "bf16-mixed"
