binary classification added

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -5,7 +5,7 @@ accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
 checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "pretrain"  # Options: "supervised", "pretrain", "finetune"
+training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
   masking_ratio: 1.0
@@ -46,8 +46,9 @@ model_options:
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "energy_reco"
-  loss_fn: "log_cosh"
+  downstream_task: "binary_classification"
+  loss_fn: "weighted_bce"
+  pos_weight: 2.0
   k_neighbors: 32
   pool_method: "max"
   pre_norm: true
