--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,11 +1,11 @@
-project_name: "neptune_prometheus"
+project_name: "fb8_testing"
 project_save_dir: "./experiment_logs/"
 training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
 checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
-training_mode: "finetune"  # Options: "supervised", "pretrain", "finetune"
+training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
   masking_ratio: 1.0
@@ -16,49 +16,55 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_set2/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades/"
   train_data_file_ranges:
-    - [0, 143]
+    # - [0, 193]
+    # - [0, 50]
     # - [0, 46]
-    # - [0, 42]
+    - [0, 42]
+    # - [0, 35]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_test/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades_test/"
   valid_data_file_ranges:
-    - [0, 24]
+    # - [0, 24]
     # - [0, 11]
-    # - [0, 10]
+    - [0, 10]
+    # - [0, 8]
   use_om2vec: false
-  use_summary_stats: false
+  use_summary_stats: true
   add_noise: false
-  time_variance: 100.0
-  dropout_fraction: 0.25
+  time_variance: 0.0
+  dropout_fraction: 0.0
   shuffle_files: true
 
 model_options:
-  in_channels: 1
-  num_patches: 512
+  in_channels: 9
+  num_patches: 128
   token_dim: 512
   num_layers: 12
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "binary_classification"
-  loss_fn: "weighted_bce"
-  pos_weight: 2.0
-  k_neighbors: 32
+  downstream_task: "angular_reco"
+  loss_fn: "vmf"
+  pos_weight: 20.0
+  k_neighbors: 8
   pool_method: "max"
   pre_norm: true
 
 training_options:
-  batch_size: 512
+  batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 50]
+  lr_schedule: [0, 30]
   weight_decay: 0.01
-  epochs: 50
+  epochs: 30
   save_epochs: 10
   num_workers: 4
   precision: "bf16-mixed"
