highly experimental sh loss

--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -53,11 +53,14 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  loss_fn: "sh"
   pos_weight: 20.0
   k_neighbors: 8
   pool_method: "max"
   pre_norm: true
+  sh_l_max: 4
+  sh_n_theta: 64
+  sh_n_lambda: 128
 
 training_options:
   batch_size: 256
