--- a/configs/train_neptune.cfg
+++ b/configs/train_neptune.cfg
@@ -1,10 +1,10 @@
 project_name: "fb8_testing"
 project_save_dir: "./experiment_logs/"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
+checkpoint: "./ckpts/neptune_sh_testing_epoch9.ckpt" # For "resume_training": resumes training state. For "finetune": loads weights for fine-tuning (ignores optimizer state). For "test": loads weights for testing.
 training_mode: "supervised"  # Options: "supervised", "pretrain", "finetune"
 
 pretrain_options:
@@ -16,26 +16,26 @@ resume_training: false
 
 data_options:
   train_data_files:
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_set2/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades/"
   train_data_file_ranges:
-    # - [0, 193]
+    - [0, 193]
     # - [0, 50]
     # - [0, 46]
-    - [0, 42]
+    # - [0, 42]
     # - [0, 35]
   valid_data_files:
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_test/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
     # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades_test/"
   valid_data_file_ranges:
-    # - [0, 24]
+    - [0, 24]
     # - [0, 11]
-    - [0, 10]
+    # - [0, 10]
     # - [0, 8]
   use_om2vec: false
   use_summary_stats: true
@@ -59,8 +59,8 @@ model_options:
   pool_method: "max"
   pre_norm: true
   sh_l_max: 4
-  sh_n_theta: 64
-  sh_n_lambda: 128
+  sh_n_theta: 512
+  sh_n_lambda: 1024
 
 training_options:
   batch_size: 256
