--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,56 @@
 [build-system]
-requires = [
-    "setuptools>=69",
-    "wheel"
-]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "neptune"
-version = "0.0.1"
-description = ""
+name = "neptune-reco"
+version = "0.1.0"
+description = "A transformer-based point cloud processing model for neutrino event reconstruction"
 readme = "README.md"
-requires-python = ">=3.9"
 license = {text = "MIT"}
-authors = []
-classifiers = []
-dependencies = []
+authors = [
+    {name = "Felix Yu"},
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Physics",
+]
+requires-python = ">=3.8"
+dependencies = [
+    "torch>=1.12.0",
+    "numpy>=1.20.0",
+    "fpsample>=0.2.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0",
+    "black>=22.0",
+    "isort>=5.0",
+    "flake8>=4.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/felixyu7/neptune"
-Issues   = "https://github.com/felixyu7/neptune/issues"
-
-# ---------------------------------------------
-#  Setuptools-specific configuration (optional)
-# ---------------------------------------------
+Repository = "https://github.com/felixyu7/neptune"
+Issues = "https://github.com/felixyu7/neptune/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["neptune*"]
-exclude = ["configs*"]
+
+[tool.black]
+line-length = 100
+target-version = ['py38', 'py39', 'py310', 'py311']
+
+[tool.isort]
+profile = "black"
+line_length = 100
