--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -8,21 +8,21 @@ checkpoint: ""
 resume_training: false
 
 data_options:
-  # Update these paths to your actual Prometheus data
+  # Updated paths to actual Prometheus data
   train_data_files:
-    - "/path/to/prometheus/data"
+    - "/Users/felixyu/icecube/data/prometheus"
   train_data_file_ranges:
-    - [0, 100]
+    - [0, 1]
   valid_data_files:
-    - "/path/to/prometheus/data"
+    - "/Users/felixyu/icecube/data/prometheus"
   valid_data_file_ranges:
-    - [100, 120]
+    - [0, 1]
   use_latent_representation: false
   geo_dict_path: null
   shuffle_files: true
 
 model_options:
-  in_channels: 6  # Prometheus features: x, y, z, t, charge, aux
+  in_channels: 9  # Prometheus summary stats: time_mean, time_std, time_min, time_max, n_hits, charge_sum, charge_mean, charge_std, duration
   num_patches: 128
   token_dim: 512
   num_layers: 12
