example script changes

--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -1,7 +1,7 @@
 project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
 training: true
-accelerator: "gpu"
+accelerator: "cpu"
 num_devices: 1
 dataloader: "prometheus"
 checkpoint: ""
