--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -8,15 +8,28 @@ checkpoint: ""
 resume_training: false
 
 data_options:
-  # Updated paths to actual Prometheus data
   train_data_files:
-    - "/Users/felixyu/icecube/data/prometheus"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_set2/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades/"
   train_data_file_ranges:
-    - [0, 1]
+    - [0, 192]
+    # - [0, 50]
+    # - [0, 46]
+    # - [0, 42]
+    # - [0, 35]
   valid_data_files:
-    - "/Users/felixyu/icecube/data/prometheus"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
+    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades_test/"
   valid_data_file_ranges:
-    - [0, 1]
+    - [0, 24]
+    # - [0, 11]
+    # - [0, 10]
+    # - [0, 8]
   use_latent_representation: false
   geo_dict_path: null
   shuffle_files: true
