--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -1,7 +1,7 @@
 project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
 training: true
-accelerator: "cpu"
+accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
 checkpoint: ""
@@ -9,27 +9,13 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_set2/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_1.1scatter_20chan/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
-    # - [0, 50]
-    # - [0, 46]
-    # - [0, 42]
-    # - [0, 35]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_mercury_data/all_sky_prometheus_icgeo_20chan_test/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_1.1scatter_20chan_test/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/cascades_test/"
-    # - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/IceCube_HE_trigger/mixed_single_double_cascades_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
-    # - [0, 11]
-    # - [0, 10]
-    # - [0, 8]
   use_latent_representation: false
   geo_dict_path: null
   shuffle_files: true
@@ -49,12 +35,12 @@ model_options:
   mlp_layers: [256, 512, 768]
 
 training_options:
-  batch_size: 64
+  batch_size: 256
   lr: 0.0001
   lr_schedule: [0, 30]
   weight_decay: 0.01
   epochs: 30
-  save_epochs: 5
-  num_workers: 4
+  save_epochs: 10
+  num_workers: 8
   precision: "bf16-mixed"
   test_precision: "32-true"
