transformer bug fixes

--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -37,10 +37,10 @@ model_options:
 training_options:
   batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 30]
+  lr_schedule: [0, 50]
   weight_decay: 0.01
-  epochs: 30
+  epochs: 50
   save_epochs: 10
   num_workers: 8
   precision: "bf16-mixed"
-  test_precision: "32-true"
+  test_precision: "bf16-mixed"
