--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -31,7 +31,7 @@ model_options:
   downstream_task: "angular_reco"
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
-  pool_method: "max"
+  pool_method: "attention"
   mlp_layers: [256, 512, 768]
 
 training_options:
