artifact saving fix

--- a/examples/configs/prometheus_energy_reco.cfg
+++ b/examples/configs/prometheus_energy_reco.cfg
@@ -8,21 +8,20 @@ checkpoint: ""
 resume_training: false
 
 data_options:
-  # Update these paths to your actual Prometheus data
   train_data_files:
-    - "/path/to/prometheus/data"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
-    - [0, 100]
+    - [0, 192]
   valid_data_files:
-    - "/path/to/prometheus/data"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
-    - [100, 120]
+    - [0, 24]
   use_latent_representation: false
   geo_dict_path: null
   shuffle_files: true
 
 model_options:
-  in_channels: 6
+  in_channels: 9  # Prometheus summary stats: time_mean, time_std, time_min, time_max, n_hits, charge_sum, charge_mean, charge_std, duration
   num_patches: 128
   token_dim: 512
   num_layers: 12
@@ -30,18 +29,18 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "energy_reco"
-  loss_fn: "gaussian_nll"  # Gaussian NLL for uncertainty estimation
+  loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
   k_neighbors: 8
-  pool_method: "max"
+  pool_method: "attention"
   mlp_layers: [256, 512, 768]
 
 training_options:
-  batch_size: 64
+  batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 25]
+  lr_schedule: [0, 50]
   weight_decay: 0.01
-  epochs: 25
-  save_epochs: 5
-  num_workers: 4
+  epochs: 50
+  save_epochs: 10
+  num_workers: 8
   precision: "bf16-mixed"
-  test_precision: "32-true"
+  test_precision: "bf16-mixed"
