adding icecube kaggle dataloader

--- a/examples/configs/icecube_angular_reco.cfg
+++ b/examples/configs/icecube_angular_reco.cfg
@@ -1,28 +1,27 @@
-project_name: "neptune_prometheus_angular"
+project_name: "neptune_icecube_angular"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
 num_devices: 1
-dataloader: "prometheus"
+dataloader: "icecube"
 checkpoint: ""
 resume_training: false
 
 data_options:
-  train_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan/"
-  train_data_file_ranges:
-    - [0, 192]
-  valid_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
-  valid_data_file_ranges:
-    - [0, 24]
+  train_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
+  train_batch_ranges: [0, 5]
+  train_meta_file: "/home/dragonlol1/data/icecube-kaggle/train_meta.parquet"
+  valid_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
+  valid_batch_ranges: [6, 7]
+  valid_meta_file: "/home/dragonlol1/data/icecube-kaggle/train_meta.parquet"
   use_latent_representation: false
   geo_dict_path: null
   shuffle_files: true
+  sensor_geometry: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
 
 model_options:
-  in_channels: 9
-  num_patches: 128
+  in_channels: 3
+  num_patches: 256
   token_dim: 512
   num_layers: 12
   num_heads: 8
