--- a/examples/configs/prometheus_energy_reco.cfg
+++ b/examples/configs/prometheus_energy_reco.cfg
@@ -9,11 +9,11 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
+    - "~/data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
+    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
   use_latent_representation: false
@@ -21,7 +21,7 @@ data_options:
   shuffle_files: true
 
 model_options:
-  in_channels: 9  # Prometheus summary stats: time_mean, time_std, time_min, time_max, n_hits, charge_sum, charge_mean, charge_std, duration
+  in_channels: 9
   num_patches: 128
   token_dim: 512
   num_layers: 12
