Modified configs, minor changes to training/logging, new reco names

--- a/configs/train_background_classifier_micro.cfg
+++ b/configs/train_background_classifier_micro.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune"
+project_name: "neptune_bkg_micro"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects"
 training: true
 accelerator: "gpu"
@@ -9,16 +9,16 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/training_MC_scrambled"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_sig_bkg_training"
   train_data_file_ranges:
-    - [0, 499]
+    - [0, 99]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/training_MC_scrambled"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_sig_bkg_testing"
   valid_data_file_ranges:
-    - [500, 539]
+    - [0, 14]
   use_pulse_series: false
   use_latent_representation: false
-  shuffle_files: true
+  shuffle_files: false
 
 model_options:
   in_channels: 9
@@ -36,11 +36,11 @@ model_options:
   pre_norm: true
 
 training_options:
-  batch_size: 256
-  lr: 0.0002
-  lr_schedule: [0, 30]
+  batch_size: 512
+  lr: 0.0001
+  lr_schedule: [0, 15]
   weight_decay: 0.01
-  epochs: 30
+  epochs: 15
   save_epochs: 1
   num_workers: 16
   precision: "bf16-mixed"
