--- a/configs/train_visible_energy_medium.cfg
+++ b/configs/train_visible_energy_medium.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune"
+project_name: "neptune_visible_energy"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects"
 training: true
 accelerator: "gpu"
@@ -22,15 +22,16 @@ data_options:
 
 model_options:
   in_channels: 9
-  num_patches: 64
-  token_dim: 128
-  num_layers: 4
-  num_heads: 4
-  hidden_dim: 256
+  num_patches: 128
+  token_dim: 512
+  mlp_layers: [128, 256, 512]
+  num_layers: 12
+  num_heads: 8
+  hidden_dim: 512
   dropout: 0.1
-  downstream_task: "morphology_classification"
-  loss_fn: "cross_entropy"
-  k_neighbors: 6
+  downstream_task: "visible_energy_reco"
+  loss_fn: "log_cosh"
+  k_neighbors: 8
   pool_method: "max"
   pre_norm: true
 
