--- a/configs/train_direction.cfg
+++ b/configs/train_direction.cfg
@@ -1,25 +1,21 @@
-project_name: "neptune"
+project_name: "meows_direction_v3"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune"
 training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "icecube_parquet"
-checkpoint: ""
-resume_training: false
+checkpoint: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/meows_direction_v3/direction_v3_backup/checkpoints/epoch_10.ckpt"
+resume_training: true
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/NuGen_22852/labels/000000-000999/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/NuGen_22853/labels/000000-000999/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_combined_tracks_training/"
   train_data_file_ranges:
     - [0, 499]
-    - [0, 199]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/NuGen_22852/labels/000000-000999/"
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/NuGen_22853/labels/000000-000999/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_combined_tracks_testing/"
   valid_data_file_ranges:
-    - [500, 599]
-    - [200, 399]
+    - [0, 49]
   use_pulse_series: false
   use_latent_representation: false
   shuffle_files: true
@@ -28,6 +24,7 @@ model_options:
   in_channels: 9
   num_patches: 128
   token_dim: 512
+  mlp_layers: [256, 612, 768]
   num_layers: 12
   num_heads: 8
   hidden_dim: 1024
@@ -44,7 +41,7 @@ training_options:
   lr_schedule: [0, 30]
   weight_decay: 0.01
   epochs: 30
-  save_epochs: 10
-  num_workers: 8
+  save_epochs: 1
+  num_workers: 16
   precision: "bf16-mixed"
   test_precision: "32-true"
