adding pulse level prometheus

--- a/examples/configs/prometheus_pulse_angular_reco.cfg
+++ b/examples/configs/prometheus_pulse_angular_reco.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune_prometheus_energy"
+project_name: "neptune_prometheus_pulse_angular"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
@@ -9,26 +9,26 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
-  use_summary_stats: true
+  use_summary_stats: false
   shuffle_files: true
 
 model_options:
-  in_channels: 9
-  num_patches: 128
+  in_channels: 2
+  num_patches: 256
   token_dim: 512
   num_layers: 12
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "energy_reco"
-  loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
+  downstream_task: "angular_reco"
+  loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
 
