--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -16,8 +16,7 @@ data_options:
     - "~/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
-  use_latent_representation: false
-  geo_dict_path: null
+  use_summary_stats: true
   shuffle_files: true
 
 model_options:
