--- a/examples/configs/prometheus_pulse_energy_reco.cfg
+++ b/examples/configs/prometheus_pulse_energy_reco.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune_prometheus_energy"
+project_name: "neptune_prometheus_pulse_energy"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
@@ -9,18 +9,18 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
-  use_summary_stats: true
+  use_summary_stats: false
   shuffle_files: true
 
 model_options:
-  in_channels: 9
+  in_channels: 2
   num_patches: 128
   token_dim: 512
   num_layers: 12
