icecube summary stats option

--- a/examples/configs/icecube_angular_reco.cfg
+++ b/examples/configs/icecube_angular_reco.cfg
@@ -14,13 +14,12 @@ data_options:
   valid_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
   valid_batch_ranges: [6, 7]
   valid_meta_file: "/home/dragonlol1/data/icecube-kaggle/train_meta.parquet"
-  use_latent_representation: false
-  geo_dict_path: null
+  use_summary_stats: false
   shuffle_files: true
   sensor_geometry: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
 
 model_options:
-  in_channels: 3
+  in_channels: 3  # 3 for pulse-level (time, charge, auxiliary), 9 for summary stats
   num_patches: 256
   token_dim: 512
   num_layers: 12
