highly experimental: gumbal tokenizer

--- a/examples/configs/icecube_angular_reco.cfg
+++ b/examples/configs/icecube_angular_reco.cfg
@@ -10,16 +10,16 @@ resume_training: false
 data_options:
   train_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
   train_batch_ranges: [0, 5]
-  train_meta_file: "/home/dragonlol1/data/icecube-kaggle/train_meta.parquet"
+  train_meta_dir: "/home/dragonlol1/data/icecube-kaggle/train_meta/"
   valid_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
   valid_batch_ranges: [6, 7]
-  valid_meta_file: "/home/dragonlol1/data/icecube-kaggle/train_meta.parquet"
+  valid_meta_dir: "/home/dragonlol1/data/icecube-kaggle/train_meta/"
   use_summary_stats: false
   shuffle_files: true
   sensor_geometry: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
 
 model_options:
-  in_channels: 3  # 3 for pulse-level (time, charge, auxiliary), 9 for summary stats
+  in_channels: 3
   num_patches: 256
   token_dim: 512
   num_layers: 12
@@ -27,17 +27,24 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"  # Von Mises Fisher loss for directions
+  loss_fn: "vmf"
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
+  # Gumbel tokenizer parameters
+  temperature: 5.0
+  temperature_min: 0.1
+  importance_hidden_dim: 256
 
 training_options:
   batch_size: 256
   lr: 0.0001
   lr_schedule: [0, 50]
   weight_decay: 0.01
-  epochs: 50
+  epochs: 20
   save_epochs: 10
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  # Gumbel scheduler parameters
+  warmup_steps: 1000
+  hard_sampling_after: 0.7
