--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -9,11 +9,11 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
   use_summary_stats: true
@@ -31,6 +31,10 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
+  # Gumbel tokenizer parameters
+  temperature: 5.0
+  temperature_min: 0.1
+  importance_hidden_dim: 256
 
 training_options:
   batch_size: 256
@@ -42,3 +46,6 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  # Gumbel scheduler parameters
+  warmup_steps: 1000
+  hard_sampling_after: 0.7
