--- a/examples/configs/prometheus_energy_reco.cfg
+++ b/examples/configs/prometheus_energy_reco.cfg
@@ -1,19 +1,19 @@
 project_name: "neptune_prometheus_energy"
 project_save_dir: "./experiments"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: ""
+checkpoint: "./ckpts/neptune-final-prometheus-energy-reco.pt"
 resume_training: false
 
 data_options:
   train_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "~/data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
   use_summary_stats: true
