--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -1,19 +1,19 @@
 project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: ""
+checkpoint: "./ckpts/neptune-final-prometheus-angular-reco.pt"
 resume_training: false
 
 data_options:
   train_data_files:
-    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
   train_data_file_ranges:
     - [0, 192]
   valid_data_files:
-    - "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test/"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
   valid_data_file_ranges:
     - [0, 24]
   use_summary_stats: true
@@ -31,10 +31,6 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  # Gumbel tokenizer parameters
-  temperature: 5.0
-  temperature_min: 0.1
-  importance_hidden_dim: 256
 
 training_options:
   batch_size: 256
@@ -46,6 +42,3 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
-  # Gumbel scheduler parameters
-  warmup_steps: 1000
-  hard_sampling_after: 0.7
