--- a/examples/configs/icecube_angular_reco.cfg
+++ b/examples/configs/icecube_angular_reco.cfg
@@ -1,22 +1,23 @@
 project_name: "neptune_icecube_angular"
 project_save_dir: "./experiments"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "icecube"
-checkpoint: ""
+checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
 
 data_options:
-  train_batch_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/icecube-kaggle/train/"
-  train_batch_ranges: [0, 5]
-  train_meta_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/icecube-kaggle/train_meta/"
-  valid_batch_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/icecube-kaggle/train/"
-  valid_batch_ranges: [6, 7]
-  valid_meta_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/icecube-kaggle/train_meta/"
+  train_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
+  train_batch_ranges: [0, 10]
+  train_meta_dir: "/home/dragonlol1/data/icecube-kaggle/train_meta/"
+  valid_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
+  valid_batch_ranges: [11, 12]
+  valid_meta_dir: "/home/dragonlol1/data/icecube-kaggle/train_meta/"
   use_summary_stats: false
   shuffle_files: true
-  sensor_geometry: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/icecube-kaggle/sensor_geometry.csv"
+  sensor_geometry: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
+  tokenizer_type: 'point_cloud'
 
 model_options:
   in_channels: 3
@@ -36,8 +37,8 @@ training_options:
   lr: 0.0001
   lr_schedule: [0, 50]
   weight_decay: 0.01
-  epochs: 20
+  epochs: 10
   save_epochs: 10
-  num_workers: 8
+  num_workers: 4
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
