--- a/examples/configs/prometheus_pulse_energy_reco.cfg
+++ b/examples/configs/prometheus_pulse_energy_reco.cfg
@@ -8,16 +8,9 @@ checkpoint: ""
 resume_training: false
 
 data_options:
-  train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
-  train_data_file_ranges:
-    - [0, 192]
-  valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
-  valid_data_file_ranges:
-    - [0, 24]
+  train_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan"
+  valid_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test"
   use_summary_stats: false
-  shuffle_files: true
 
 model_options:
   in_channels: 2
