--- a/examples/configs/prometheus_angular_reco.cfg
+++ b/examples/configs/prometheus_angular_reco.cfg
@@ -1,23 +1,16 @@
 project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
-training: false
+training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: "./ckpts/neptune-final-prometheus-angular-reco.pt"
+checkpoint: ""
 resume_training: false
 
 data_options:
-  train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan/"
-  train_data_file_ranges:
-    - [0, 192]
-  valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/prometheus_om2vec_data/all_sky_prometheus_icgeo_20chan_test/"
-  valid_data_file_ranges:
-    - [0, 24]
+  train_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan"
+  valid_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test"
   use_summary_stats: true
-  shuffle_files: true
 
 model_options:
   in_channels: 9
@@ -31,13 +24,14 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 50]
+  lr_schedule: [0, 30]
   weight_decay: 0.01
-  epochs: 50
+  epochs: 30
   save_epochs: 10
   num_workers: 8
   precision: "bf16-mixed"
