refactoring / better mmap support

--- a/scripts/configs/icecube_angular_reco.cfg
+++ b/scripts/configs/icecube_angular_reco.cfg
@@ -3,7 +3,7 @@ project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
 num_devices: 1
-dataloader: "icecube"
+dataloader: "kaggle"
 checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
 
@@ -14,10 +14,9 @@ data_options:
   valid_batch_dir: "/home/dragonlol1/data/icecube-kaggle/train/"
   valid_batch_ranges: [11, 12]
   valid_meta_dir: "/home/dragonlol1/data/icecube-kaggle/train_meta/"
+  geometry_path: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
   use_summary_stats: false
   shuffle_files: true
-  sensor_geometry: "/home/dragonlol1/data/icecube-kaggle/sensor_geometry.csv"
-  tokenizer_type: 'point_cloud'
 
 model_options:
   in_channels: 3
