--- a/scripts/configs/prometheus_pulse_energy_reco.cfg
+++ b/scripts/configs/prometheus_pulse_energy_reco.cfg
@@ -8,9 +8,11 @@ checkpoint: ""
 resume_training: false
 
 data_options:
-  train_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan"
-  valid_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test"
-  use_summary_stats: false
+  # New unified format - single data path with runtime splitting
+  data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_combined"
+  val_split: 0.2                # 20% for validation
+  split_seed: 42                # For reproducible splits
+  use_summary_stats: false      # Pulse-level features
 
 model_options:
   in_channels: 2
