--- a/scripts/configs/prometheus_angular_reco.cfg
+++ b/scripts/configs/prometheus_angular_reco.cfg
@@ -1,16 +1,18 @@
 project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
-training: true
+training: false
 accelerator: "gpu"
 num_devices: 1
 dataloader: "prometheus"
-checkpoint: ""
+checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
 
 data_options:
-  train_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan"
-  valid_data_path: "/home/dragonlol1/data/all_sky_prometheus_icgeo_20chan_test"
-  use_summary_stats: true
+  # New unified format - single data path with runtime splitting
+  data_path: "/home/dragonlol1/data/prometheus_cascades_combined"
+  val_split: 0.2                # 20% for validation
+  split_seed: 42                # For reproducible splits
+h  use_summary_stats: true
 
 model_options:
   in_channels: 9
@@ -24,15 +26,15 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "point_cloud"
+  tokenizer_type: "lightweight"
 
 training_options:
   batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 30]
+  lr_schedule: [0, 5]
   weight_decay: 0.01
-  epochs: 30
-  save_epochs: 10
+  epochs: 5
+  save_epochs: 5
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
