bundling nt summary stats

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ Issues = "https://github.com/felixyu7/neptune/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["neptune*"]
+include = ["neptune*", "nt_summary_stats*"]
 
 [tool.black]
 line-length = 100
